Avoid page breaks inside single report

--- a/templates/criterion.css
+++ b/templates/criterion.css
@@ -87,6 +87,7 @@ table.analysis .low, table.analysis .high {
 }
 .report-details {
   margin: 2em 0;
+  page-break-inside: avoid;
 }
 a, a:hover, a:visited, a:active {
   text-decoration: none;
